# govern-ai-agent

./: .env.example  .gitignore  README.md  agent-detail.txt  jupiter_discovery_schema_v2.json  main.py  pyproject.toml
agent/api/: _env.py  audit_schemas.py  auth_schemas.py  discovery_schemas.py  discovery_schemas_v2.py  kg_schemas.py  main.py  port_check.py  run_api.py  schemas.py  storage.py
agent/audit/: evaluator.py  kg_context.py  normalize.py  orchestrator.py  phoenix_client.py  prompt_builder.py  pubsub.py  report_generator.py  request_injector.py  sandbox_probe.py  sandbox_url.py  worker.py
agent/auth/: tokens.py
agent/discovery/: __init__.py  digital_twin.py  fact_extractor.py  gap_analyzer.py  interaction_resolver.py  kg_mapper.py  llm_config.py  models.py  orchestrator.py  (+7 more)
docs/: updated_discovery_spec.js
scripts/: debug_phoenix_spans.py  map_kg_from_session_file.py
tests/: conftest.py  test_api_v2.py  test_audit_api.py  test_audit_evaluator.py  test_audit_generator.py  test_audit_kg_context.py  test_audit_strategies.py  test_audit_worker.py  test_auth_api.py  test_boot_v2.py  test_contextual_extract.py  test_customer_graph.py  test_discovery_api.py  test_entity_extractor.py  test_fact_extractor.py  test_gap_analyzer.py  test_interaction_resolver.py  test_kg_api.py  test_kg_mapper.py  test_kg_search.py  test_llm_v2.py  test_orchestrator.py  test_phoenix_client.py  test_priority_queue_v2.py  test_report_generator.py  test_sandbox_probe.py  test_sandbox_url.py  test_state_ops_v2.py  test_streaming_v2.py  test_tool_registry_v2.py  test_tools_v2.py
(+63 files in other folders)
