[project]
name = "govern-ai-agent"
version = "0.1.0"
description = "GovernAI agent with Neo4j governance knowledge graph"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "certifi>=2026.5.20",
    "neo4j>=5.0",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
