[project]
name = "govern-ai-agent"
version = "0.1.0"
description = "GovernAI agent with Neo4j governance knowledge graph"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "certifi>=2026.5.20",
    "email-validator>=2.0.0",
    "fastapi>=0.115.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "neo4j>=5.0",
    "pymongo>=4.10.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.0.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
